--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -19,8 +19,7 @@ dataSources:
         - name: L2ToL1Messenger
           file: ./abis/L2ToL1MessagePasser.json
       eventHandlers:
-        - event: MessagePassed(indexed uint256,indexed address,indexed
-            address,uint256,uint256,bytes,bytes32)
+        - event: MessagePassed(indexed uint256,indexed address,indexed address,uint256,uint256,bytes,bytes32)
           handler: handleMessagePassed
       file: ./src/l2tol1messenger.ts
   - kind: ethereum
@@ -42,7 +41,6 @@ dataSources:
         - name: L2StandardBridge
           file: ./abis/L2StandardBridge.json
       eventHandlers:
-        - event: WithdrawalInitiated(indexed address,indexed address,indexed
-            address,address,uint256,bytes)
+        - event: WithdrawalInitiated(indexed address,indexed address,indexed address,address,uint256,bytes)
           handler: handleWithdrawInitiated
       file: ./src/withdrawInitiated.ts
